--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
   "homepage": "https://github.com/RegmiS/BasicElectron#readme",
   "devDependencies": {
     "electron": "^19.0.6"
+  },
+  "dependencies": {
+    "jshint": "^2.13.4"
   }
 }
